# aqar-scraper

./: .flake8  .gitignore  Aqar.csv  README.md  pyproject.toml  requirements.txt
app/: app.py
app/helpers/: cleaner.py  date_helpers.py
